src/theme/NavbarItem/DropdownLinkItem/styles.module.css
.dropdownLinkItem {
  position: relative;
}

.links {
  background: var(--ifm-background-surface-color);
  border-radius: 2px;
  display: flex;
  flex-direction: column;
  opacity: 0;
  padding: 0.25rem;
  position: absolute;
  right: 0;
  text-align: right;
  top: 50%;
  transition: opacity var(--ifm-transition-fast), top var(--ifm-transition-fast);
}

.dropdownLinkItem:focus-within .links,
.dropdownLinkItem:hover .links {
  opacity: 1;
  top: 100%;
}

.links a {
  white-space: nowrap;
}

